--- a/metadata/layout.conf
+++ b/metadata/layout.conf
@@ -15,4 +15,6 @@ update-changelog = false
 # Use thin manifests
 thin-manifests = true
 # Dont sign thinn manifests. There is no current policy for git commit signing
+# Sign Git commits, and NOT Manifests
+sign-commits = true
 sign-manifests = false
